<resources>
    <string name="google_maps_v2_api_key">AIzaSyC-St58T3_nmyQCkkS9NfPX0sGaUEV10yM</string>
    <string name="app_name">BeautycianApp</string>
    <string name="character_next">&lt;</string>
    <string name="empty_text">""</string>
    <string name="bullet"><b>&#183;</b></string>
    <string name="question_mark">"?"</string>
    <string name="treatment_of">הטיפול של</string>
    <string name="start_soon">מתחיל בקרוב..</string>
    <string name="treatment_start_within">הטיפול יתחיל בעוד</string>
    <string name="treatment_just_started">טיפול החל</string>
    <string name="enter_to_set_treatment_status">היכנסי על מנת לעדכן אותנו באם הטיפול התבצע</string>
    <string name="reminder">תזכורת:</string>
    <string name="treatment_happen_confirmation">אישור על ביצוע טיפול</string>
    <string name="happen">בוצע</string>
    <string name="not_happen">לא בוצע</string>
    <string name="why_treatment_canceled">מדוע לא התבצע טיפול</string>
    <string-array name="dialog_treatment_not_happend_reasons">
        <item>הלקוח לא הגיע</item>
        <item>לא התאפשר לקוסמטיקאית</item>
        <item>נדחה ליום אחר</item>
    </string-array>
    <string name="request_received">התקבלה בקשה</string>
    <string name="new_request_is_waiting_for_you_inside_the_app">בקשה חדשה ממתינה עבורך באפליקציה</string>
    <string name="watch">צפה</string>
    <string name="deny">דחה</string>
    <string name="has_canceled_the_treatment">ביטל את הפגישה שתוכננה ל</string>
    <string name="treatment_successfully_confirmed">הטיפול הוזמן בהצלחה!</string>
    <string name="want_to_call_the_client">מעוניינת ליצור קשר עם הלקוח?</string>
    <string name="in_case_you_would_like_to_contact_the_customer_another_time">במידה ותרצי להתקשר במועד אחר תוכלי לעשות זאת דרך הטיפול שנקבע לך עם הלקוח, באיזור \"טיפולים\"</string>
	<string name="no">לא</string>
	<string name="response_confirmed">הצעתך התקבלה!</string>
	<string name="response_confirmed_message">אישר את הצעתך! היכנסי לאפליקציה בכדי לראות את פרטי הטיפול</string>
	<string name="response_declined">הזמנה בוטלה</string>
	<string name="your_offer_didnt_fit_to">המכרז לא התאים ל</string>
	<string name="and_he_declined_your_offer">והוא דחה את הצעתך.</string>
    <string name="cant_load_map">לא ניתן לטעון מפה</string>
    <string name="loading">טוען..</string>
    <string name="available">זמין</string>
    <string name="unavailable">לא זמין</string>
    <string name="title_future_treatments">הטיפולים הקרובים</string>
    <string name="title_messages">מכרזים פתוחים</string>
    <string name="title_statistics">סטטיסטיקות</string>
    <string name="title_my_profile">פרופיל אישי</string>
    <string name="title_treatments_history">היסטוריית טיפולים</string>
    <string name="title_explanation">הסבר</string>
    <string name="title_settings">הגדרות</string>
    <string name="title_support">שירות לקוחות</string>
    <string name="title_terms_of_use">תקנון</string>
    <string name="dialog_ok_text">OK</string>
    <string name="dialog_cancel_text">Cancel</string>
    <string name="dialog_messege_server_error">יש לנו בעית התקשרות.. אנו עובדים על פתרון</string>
    <string name="success">הצליח!</string>
    <string name="no_internet_connection">אין חיבור אינטרנט פעיל, בדוק את החיבור לאינטרנט ונסה שנית</string>
    <string name="dialog_messege_please_wait">אנא המתן..</string>
    <string name="press_again_to_exit">לחץ שוב ליציאה</string>
    <string name="select_address">בחרי כתובת</string>
	<string name="you_must_provide_at_least_one_treatment">עלייך לספק לפחות טיפול אחד</string>
    <string name="invalid_filed">שדה לא תקין</string>
    <string name="you_must_fill_all_fields">חובה למלא את כל השדות</string>
    <string name="remove">הסר</string>
    <string name="income">הכנסות</string>
    <string name="general_details">נתונים כללים</string>
    <string name="total_income">סה\"כ הכנסות:</string>
    <string name="total_income_at_current_year">סה\"כ הכנסות לשנת</string>
    <string name="total_treatments">סה\"כ טיפולים:</string>
    <string name="total_treatments_at_current_year">סה\"כ טיפולים לשנת</string>
    <string name="january">ינואר</string>
    <string name="february">פבואר</string>
    <string name="march">מרץ</string>
    <string name="april">אפריל</string>
    <string name="may">מאי</string>
    <string name="june">יוני</string>
    <string name="july">יולי</string>
    <string name="august">אוגוסט</string>
    <string name="september">ספטמבר</string>
    <string name="october">אוקטובר</string>
    <string name="november">נובמבר</string>
    <string name="december">דצמבר</string>
    <string name="history">היסטורית טיפולים</string>
    <string name="no_history">אין הסטוריה</string>
    <string name="date">תאריך:</string>
    <string name="client">מטופל:</string>
    <string name="treatment">טיפול:</string>
    <string name="history_address">כתובת:</string>
    <string name="register"><b>רישום</b></string>
    <string name="type_registration_code">הקלדת קוד שימוש</string>
    <string name="press_to_change_profile_pic"><b>לחצו על מנת לשנות תמונת פרופיל</b></string>
    <string name="password_that_sent_to_you_by_mail">סיסמא שנשלחה אליכם במייל/טלפון</string>
    <string name="if_your_password_got_lost">במידה ואבדה לכם הסיסמא או שטרם נרשמתם, אנא כנסו לאתר:</string>
    <string name="proceed">המשך</string>
    <string name="invalid_registration_code">הקוד שהוקש שגוי!</string>
	<string name="upcoming_treatments">טיפולים קרובים</string>
	<string name="no_treatments_change_status_to_available">אין טיפולים\n\nעל מנת לקבל הזמנות לטיפולים\nעלייך להיות במצב זמין</string>
	<string name="message_deleted">הודעה נמחקה</string>
	<string name="message_declined">הצעה נדחתה</string>
	<string name="no_messages">אין הודעות</string>
	<string name="messages">הודעות</string>
	<string name="send">שלח</string>
	<string name="cancel">בטל</string>
	<string name="set_hour">הגדרי שעה</string>
	<string name="hour">שעה</string>
	<string name="set_price">הגדרי מחיר</string>
	<string name="confirm_treatment_dialog_title">אישור טיפול</string>
	<string name="confirm_treatment_dialog_subtitle">במידה ויש טיפול שאינך יכולה לספק, אנא הסירי אותו מהרשימה</string>
	<string name="address">כתובת</string>
	<string name="at_costumer_house">בבית הלקוח</string>
	<string name="at_my_place">אצל הקוסמטיקאית</string>
	<string name="else_">אחר</string>
	    <string-array name="dialog_location_array">
        <item>@string/at_costumer_house</item>
        <item>@string/at_my_place</item>
        <item>@string/else_</item>
    </string-array>
	<string name="finished">סיימתי</string>
	<string name="profile">פרופיל</string>
	<string name="hint_bussiness_name">שם העסק</string>
	<string name="hint_full_name">שם מלא</string>
	<string name="raters">מדרגים</string>
	<string name="classification">סיווג:</string>
	<string name="hint_classification">סיווג</string>
	<string name="yes">כן</string>
	<string name="contact_options">פרטי יצירת קשר</string>
	<string name="telephone">טלפון:</string>
	<string name="email">מייל:</string>
	<string name="business_address">כתובת העסק:</string>
	<string name="billing_address">כתובת למשלוח חשבוניות:</string>
	<string name="arrive_at_the_customer_house">הגעה לבית הלקוח:</string>
	<string name="area">איזור:</string>
	<string name="unedited">לא ניתן לעריכה</string>
	<string name="hint_email">אי מייל</string>
	<string name="hint_business_address">כתובת העסק</string>
	<string name="hint_billing_address">כתובת למשלוח חשבוניות</string>
	<string name="diplomas">תעודות</string>
	<string name="no_diplomas">אין תעודות</string>
	<string name="personal_details">פרטים אישיים</string>
	<string name="about">אודות:</string>
	<string name="write_somthing_on_yourself">כתבי משהו על עצמך</string>
	<string name="years_of_experience">שנות נסיון:</string>
	<string name="title_years_of_experience">שנות נסיון</string>
	<string name="payment_method">אמצעי תשלום:</string>
	<string name="title_payment_method">אמצעי תשלום</string>
	<string name="treatment_canceled">טיפול בוטל</string>
	<string name="treatments">טיפולים</string>
	<string name="and_more">ועוד</string>
	<string name="additional">נוספים</string>
	<string name="no_treatments">לא הוזמנו טיפולים</string>
	<string name="when">מתי:</string>
	<string name="wanted_treatment">טיפול מבוקש:</string>
	<string name="location">מיקום:</string>
	<string name="remarks">היערות:</string>
	<string name="price">מחיר:</string>
	<string name="currency">ש\"ח</string>
	<string name="cause_to_cancel_treatment">סיבת ביטול הטיפול</string>
	<string name="canceling_time_after_time_will_cause_your_account_to_be_closed">ביטולים חוזרים ונשנים יגרמו לחשבונך להיסגר</string>
	<string name="go_back">חזור</string>
	<string name="settings">הגדרות</string>
	<string name="time_before_treatment_to_alert">פרק זמן להתראה לפני טיפול:</string>
	<string name="pre_treatment_alert">התראה לפני טיפול</string>
	<string name="close">סגור</string>
	<string name="minutes">דקות</string>
	<string name="hours">שעות</string>
    <string-array name="payment_1">
        <item name="id">1</item>
        <item name="title">אשראי או מזומן</item>
    </string-array>
    <string-array name="payment_2">
        <item name="id">2</item>
        <item name="title">אשראי</item>
    </string-array>
    <string-array name="payment_3">
        <item name="id">3</item>
        <item name="title">מזומן</item>
    </string-array>
    <string-array name="area_1">
        <item name="id">1</item>
        <item name="title">צפון</item>
    </string-array>
    <string-array name="area_2">
        <item name="id">2</item>
        <item name="title">שרון</item>
    </string-array>
    <string-array name="area_3">
        <item name="id">3</item>
        <item name="title">מרכז</item>
    </string-array>
    <string-array name="area_4">
        <item name="id">4</item>
        <item name="title">ירושלים</item>
    </string-array>
    <string-array name="area_5">
        <item name="id">5</item>
        <item name="title">שפלה</item>
    </string-array>
    <string-array name="area_6">
        <item name="id">6</item>
        <item name="title">דרום</item>
    </string-array>
    <string-array name="classification_1">
        <item name="id">1</item>
        <item name="title">קוסמטיקאית</item>
    </string-array>
    <string-array name="classification_2">
        <item name="id">2</item>
        <item name="title">פדיקוריסטית</item>
    </string-array>
    <string-array name="classification_3">
        <item name="id">3</item>
        <item name="title">מאפרת</item>
    </string-array>
    <string-array name="classification_4">
        <item name="id">4</item>
        <item name="title">רפואה אסטטית</item>
    </string-array>
    <string-array name="treatment_1">
        <item name="id">1</item>
        <item name="title">פדיקור</item>
        <item name="description">טיפול בכפות הרגליים. הטיפול בדרך כלל כולל השריית הרגליים
במים, הסרת עור יבש מכף הרגל, גזירת ציפורניים והעור מסביב 
לציפורניים, עיסוי פילינג לכפות הרגליים, עיסוי כפות הרגליים 
בקרם רגליים מזין ומריחת לק לפי בקשת לקוחה. הטיפול כולל 
גם טיפול בבעיות כף הרגל השונות כגון טיפול ביבלות, ציפורן 
חודרנית, פטרת, יבלות, עור סדוק וכיו"ב. אוכלוסיות מסויימות 
זקוקות לטיפול באופן תכוף יותר כגון סכרתיים.</item>
        <item name="price">80&#8211;180</item>
    </string-array>
    <string-array name="treatment_2">
        <item name="id">2</item>
        <item name="title">מניקור</item>
        <item name="description">טיפול אסטטי לציפורניים בידיים. לרוב כולל הטיפול גם פילינג
ועיסוי לכף היד. כולל מריחת לק לפי בקשת הלקוחה.</item>
        <item name="price">45&#8211;100</item>
    </string-array>
</resources>