<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" >

    <item
        android:id="@+id/action_future_treatments"
        android:icon="@drawable/ic_future_treatments"
        android:showAsAction="always"
        android:title="@string/title_future_treatments"/>
    <item
        android:id="@+id/action_messages"
        android:icon="@drawable/ic_messages"
        android:showAsAction="always"
        android:title="@string/title_messages"/>
    <item
        android:id="@+id/action_statistics"
        android:icon="@drawable/ic_statistics"
        android:showAsAction="always"
        android:title="@string/title_statistics"/>
    <item
        android:id="@+id/action_my_profile"
        android:showAsAction="never"
        android:title="@string/title_my_profile"/>
    <item
        android:id="@+id/action_treatment_history"
        android:showAsAction="never"
        android:title="@string/title_treatments_history"/>
    <item
        android:id="@+id/action_explanation"
        android:showAsAction="never"
        android:title="@string/title_explanation"/>
    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/title_settings"/>
    <item
        android:id="@+id/action_customer_help"
        android:showAsAction="never"
        android:title="@string/title_support"/>
    <item
        android:id="@+id/action_terms_of_use"
        android:showAsAction="never"
        android:title="@string/title_terms_of_use"/>

</menu>