<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fragment_padding"
        android:layout_marginRight="@dimen/fragment_padding"
        android:layout_marginTop="50dp"
        android:background="@color/app_white"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:id="@+id/dialog_my_profile_editing_contact_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <com.pictureit.noambaroz.beauticianapp.utilities.view.MyFontTextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fragment_padding"
                    android:text="@string/finished"
                    android:textColor="@color/text_color_gray" />

                <View
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_alignRight="@+id/divider2"
                    android:layout_below="@+id/textView3"
                    android:background="@color/divider_color_gray" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_alignBottom="@+id/divider1"
                    android:layout_toRightOf="@+id/textView3"
                    android:background="@color/divider_color_gray" />
            </RelativeLayout>

            <com.pictureit.noambaroz.beauticianapp.utilities.view.MyFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:drawableRight="@drawable/ic_individual"
                android:paddingRight="@dimen/fragment_padding"
                android:text="@string/contact_options"
                android:textColor="@color/app_most_common_yellow_color"
                android:textSize="@dimen/title_medium_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:background="@color/divider_color_gray" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/fragment_padding" >

            <com.pictureit.noambaroz.beauticianapp.utilities.view.MyFontTextView
                android:id="@+id/tv_dialog_my_profile_editing_contact_telephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:textColor="@color/text_color_gray" />

            <com.pictureit.noambaroz.beauticianapp.utilities.view.MyFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unedited"
                android:textColor="#d4d5d6" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="@color/divider_color_gray" />

        <com.pictureit.noambaroz.beauticianapp.utilities.view.MyEditText
            android:id="@+id/et_dialog_my_profile_editing_contact_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/text_color_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="@color/divider_color_gray" />

        <com.pictureit.noambaroz.beauticianapp.utilities.view.MyEditText
            android:id="@+id/et_dialog_my_profile_editing_contact_business_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/hint_business_address"
            android:inputType="text"
            android:textColor="@color/text_color_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="@color/divider_color_gray" />

        <com.pictureit.noambaroz.beauticianapp.utilities.view.MyEditText
            android:id="@+id/et_dialog_my_profile_editing_contact_billing_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/hint_billing_address"
            android:inputType="text"
            android:textColor="@color/text_color_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="@color/divider_color_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/fragment_padding" >

                <RadioButton
                    android:id="@+id/rb_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableRight="@drawable/btn_radio_holo_light"
                    android:text="@string/yes"
                    android:textColor="@color/app_most_common_yellow_color"
                    android:textSize="@dimen/common_text_size" />

                <RadioButton
                    android:id="@+id/rb_not_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableRight="@drawable/btn_radio_holo_light"
                    android:text="@string/no"
                    android:textColor="@color/app_most_common_yellow_color"
                    android:textSize="@dimen/common_text_size" />
            </RadioGroup>

            <com.pictureit.noambaroz.beauticianapp.utilities.view.MyFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:text="@string/arrive_at_the_customer_house"
                android:textColor="@color/text_color_gray" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="@color/divider_color_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/fragment_padding" >

            <com.pictureit.noambaroz.beauticianapp.utilities.view.MyFontTextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/fragment_padding"
                android:text="@string/area"
                android:textColor="@color/text_color_gray" />

            <com.pictureit.noambaroz.beauticianapp.utilities.view.MyFontTextView
                android:id="@+id/tv_dialog_my_profile_editing_contact_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/textView4"
                android:background="@drawable/btn_select_shape"
                android:gravity="center"
                android:text="dddd"
                android:textColor="@color/text_color_gray" />
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>