<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_white"
    android:orientation="vertical" >

    <com.pictureit.noambaroz.beauticianapp.utilities.view.MyFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_most_common_yellow_color"
        android:drawablePadding="@dimen/fragment_padding"
        android:drawableRight="@drawable/ic_treatment"
        android:padding="@dimen/fragment_padding"
        android:text="@string/treatment_happen_confirmation"
        android:textColor="@color/app_white"
        android:textSize="@dimen/title_large_text_size" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fragment_padding" >

        <ImageView
            android:id="@+id/iv_dialog_treatment_begin_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/fragment_padding"
            android:background="@drawable/profile_avatar" />

        <com.pictureit.noambaroz.beauticianapp.utilities.view.MyFontTextView
            android:id="@+id/tv_dialog_treatment_begin_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_gray"
            android:textSize="@dimen/common_text_size" />

        <com.pictureit.noambaroz.beauticianapp.utilities.view.MyFontTextView
            android:id="@+id/tv_dialog_treatment_begin_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fragment_padding"
            android:layout_toLeftOf="@+id/iv_dialog_treatment_begin_image"
            android:layout_toRightOf="@+id/tv_dialog_treatment_begin_date"
            android:gravity="right"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/common_text_size" />

        <com.pictureit.noambaroz.beauticianapp.utilities.view.MyFontTextView
            android:id="@+id/tv_dialog_treatment_begin_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_dialog_treatment_begin_name"
            android:layout_toLeftOf="@+id/iv_dialog_treatment_begin_image"
            android:textColor="@color/text_color_gray"
            android:textSize="@dimen/common_text_size" />

        <com.pictureit.noambaroz.beauticianapp.utilities.view.MyFontTextView
            android:id="@+id/tv_dialog_treatment_begin_treatment_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_dialog_treatment_begin_image"
            android:gravity="center_horizontal"
            android:padding="@dimen/fragment_padding"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/title_large_text_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/fragment_padding" >

        <com.pictureit.noambaroz.beauticianapp.utilities.view.MyFontTextView
            android:id="@+id/b_dialog_treatment_begin_not_happen"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="2"
            android:background="@drawable/btn_shape"
            android:gravity="center"
            android:text="@string/not_happen"
            android:textColor="@color/app_white"
            android:textSize="@dimen/title_large_text_size" />

        <com.pictureit.noambaroz.beauticianapp.utilities.view.MyFontTextView
            android:id="@+id/b_dialog_treatment_begin_happen"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="@dimen/fragment_padding"
            android:layout_weight="3"
            android:background="@drawable/btn_shape"
            android:gravity="center"
            android:text="@string/happen"
            android:textColor="@color/app_white"
            android:textSize="@dimen/title_large_text_size" />
    </LinearLayout>

</LinearLayout>